Use varhandles on Sequence.